Update Java-Version